fix issue on dark mode switch

--- a/next-app/src/pages/styles.css
+++ b/next-app/src/pages/styles.css
@@ -8,8 +8,3 @@ td.MuiTableCell-body {
 td.MuiTableCell-head {
   padding: 4px 4px 4px 16px;
 }
-td.makeStyles-secondColumn-44 {
-  padding-left: 0;
-  padding-right: 0;
-  width: 35px;
-}
