--- a/next-app/src/storybook/components/PokemonPaginate/components/pokemon-table/PokemonTable.module.css
+++ b/next-app/src/storybook/components/PokemonPaginate/components/pokemon-table/PokemonTable.module.css
@@ -1,4 +1,3 @@
 .makeStyles-secondColumn-44 {
   padding-left: 0 !important;
-  background-color: red;
 }
